# FastApi-RAG-backend

./: .env  Dockerfile  README.md  pyproject.toml
fastapi_rag/: main.py
