[tool.poetry]
name = "fastapi-rag"
version = "0.1.0"
description = ""
authors = ["fahadsalamatrandhawa <dreamtwister61814@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
langchain = "^0.1.12"
unstructured = "^0.12.6"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-multipart = "^0.0.9"
openai = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
